<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="4">

        <Button
            android:id="@+id/button1"
            android:text="@string/ohayou"
            app:layout_columnWeight="1"
            android:tag="ohayou"
            android:onClick="playPhrase"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button2"
            android:text="@string/genkidesuka"
            android:tag="genkidesuka"
            app:layout_columnWeight="1"
            android:onClick="playPhrase"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button3"
            android:text="@string/doomo"
            android:tag="doomo"
            android:onClick="playPhrase"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button4"
            android:text="@string/dewamata"
            android:tag="dewamata"
            android:onClick="playPhrase"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button5"
            android:text="@string/ki_o_tsukete"
            android:tag="ki_o_tsukete"
            android:onClick="playPhrase"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button6"
            android:text="@string/oyasuminasai"
            app:layout_columnWeight="1"
            android:onClick="playPhrase"
            android:tag="oyasuminasai"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button7"
            android:text="@string/sumimasen"
            android:tag="sumimasen"
            android:onClick="playPhrase"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button8"
            android:text="@string/sayonara"
            android:tag="sayonara"
            android:onClick="playPhrase"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

    </android.support.v7.widget.GridLayout>
</android.support.constraint.ConstraintLayout>